<resources>
    <string name="app_name">HostelManagement</string>
    <string name="welcome_in_hostelmanagement">Welcome in HostelManagement</string>
    <string name="user_email">user_email</string>
    <string name="loguot">loguot</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">LogIn</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="register_now">REGISTER NOW!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="hostel_fragment">Hostel fragment</string>
    <string name="renting_fragment">Renting fragment</string>
    <string name="hostels_list">Hostels list</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>