<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    tools:context=".accountService.LoginActivity">

    <TextView
        android:id="@+id/tv_welcomeTextLoginScreen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:text="@string/welcome_in_hostelmanagement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_mailLoginScreen"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:hint="@string/e_mail"
        android:autofillHints="emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_welcomeTextLoginScreen" />

    <EditText
        android:id="@+id/et_passwordLoginScreen"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:autofillHints="password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_mailLoginScreen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_button"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_passwordLoginScreen" />
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/btn_loginButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center">
        <TextView
            android:id="@+id/tv_noAccountLoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account_yet"
            android:textSize="15sp"
            />

        <TextView
            android:id="@+id/tv_registerNowLoginScreen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/register_now"
            android:textSize="15sp"
            />

    </TableRow>

</androidx.constraintlayout.widget.ConstraintLayout>